--- a/assets/css/vars.css
+++ b/assets/css/vars.css
@@ -1,6 +1,6 @@
 :root {
-    --main-width: 750px;
-    --main-padding: 1rem;
+    --main-width: 780px;
+    --main-padding: 1.4em;
     --main-padding-bottom: 3rem;
 
     /* header settings */
@@ -20,6 +20,12 @@
     --p-margin-bottom: 1rem;
     --code-margin-top: 2rem;
     --code-margin-bottom: 2rem;
+
+    --h1-font-size: 2em;
+    --h2-font-size: 1.8em;
+    --hx-font-size: 1.3em;
+    --p-font-size: 1em;
+    --p-line-height: 1.5em;
 
     /* List indentation */
     --li-indent: 1.5rem;
